--- a/src/Mobile/eShopOnContainers/eShopOnContainers.Core/project.json
+++ b/src/Mobile/eShopOnContainers/eShopOnContainers.Core/project.json
@@ -4,6 +4,7 @@
     "Autofac": "4.5.0",
     "Microsoft.Bcl": "1.1.10",
     "Microsoft.Bcl.Build": "1.0.21",
+    "Microsoft.Net.Http": "2.2.29",
     "Newtonsoft.Json": "9.0.1",
     "PCLCrypto": "2.0.147",
     "SlideOverKit": "2.1.4",
