--- a/src/Mobile/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
+++ b/src/Mobile/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
@@ -62,7 +62,9 @@
     <Compile Include="Helpers\ServicesHelper.cs" />
     <Compile Include="Helpers\Settings.cs" />
     <Compile Include="Services\Catalog\CatalogService.cs" />
+    <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="Services\Constants.cs" />
+    <Compile Include="Services\Order\OrderService.cs" />
     <Compile Include="Views\Templates\BasketItemTemplate.xaml.cs">
       <DependentUpon>BasketItemTemplate.xaml</DependentUpon>
     </Compile>
